<resources>
    <string name="app_name">Wounds Canada</string>
    <string name="title_home">Home</string>
    <string name="title_best_practices">Best Practices</string>
    <string name="title_publications">Publications</string>
    <string name="title_tools">Tools</string>
    <string name="title_events">Events</string>
    <string name="wounds_canada_logo">Wounds canada logo</string>
</resources>
